adjusted images to correct size and z index, made text white with black shadow to contrast over images

--- a/style.css
+++ b/style.css
@@ -68,3 +68,8 @@ button {
 img {
     width: 100%;
 }
+
+h4 {
+    color: white;
+    text-shadow: 1px 1px 10px black;
+}
